--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "postinstall": "curl -s https://raw.githubusercontent.com/reactorcore/pomander/master/bin/install | bash",
     "start": "node server/basic-server.js",
     "start:es6": "babel-node server/basic-server.js",
+    "start:watch": "nodemon --inspect server/basic-server.js",
     "test": "mocha server/spec",
     "test:es6": "mocha --compilers js:babel-register server/spec",
     "lint": "eslint ./"
@@ -29,5 +30,8 @@
     "presets": [
       "es2015"
     ]
+  },
+  "dependencies": {
+    "underscore": "^1.8.3"
   }
 }
